--- a/START CODE (W10)/EXERCISE 3/index.html
+++ b/START CODE (W10)/EXERCISE 3/index.html
@@ -18,6 +18,14 @@
     </div>
     <div class="container">
       <!-- The cards shall be in this container -->
+       
+      <div class="card">
+        <p>Description</p>
+        <div class="card-footer">
+          <button>Remove Card</button>
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
