--- a/START CODE (W10)/EXERCISE 5/index.html
+++ b/START CODE (W10)/EXERCISE 5/index.html
@@ -24,7 +24,13 @@
           <br />
           <button id="addButton" type="button">Add task</button>
         </form>
+        <div class="filter-buttons">
+          <button id="showPriorityTasks">Show only important tasks</button>
+          <button id="showNormalTasks">Show the tasks that are not important</button>
+          <button id="showAll">Show all tasks</button>
+        </div>
       </div>
+      <div class="displaySection"></div>
     </div>
   </body>
 </html>
